<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="log_is_empty">Log is Empty</string>
    <string name="mail_report">Mail Report</string>
    <string name="ok">OK</string>
    <string name="all_time">All Time</string>
    <string name="last_four_weeks">Last Four Weeks</string>
    <string name="last_two_weeks">Last Two Weeks</string>
    <string name="last_week">Last Week</string>
    <string name="view_log_menu_title">View Log</string>
    <string name="report">Report</string>
    <string name="how_much">How Much?</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="help_menu_title">Help</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete_word_msg">Are you sure you want to delete this word? All log entries for it will be deleted.</string>
    <string name="confirm_delete_entry_msg">Are you sure you want to delete this entry?</string>

    <string name="edit_word">Edit Word</string>
    <string name="edit_words">Edit Words</string>
    <string name="how_do_you_feel">How Do You Feel?</string>

    <string name="app_name">Mood Log</string>

    <string name="log_word_dialog_title">How Much?</string>

    <string name="generating_email">Generating Email</string>
    <string name="empty_log_alert_title">Empty Log</string>
    <string name="empty_log_alert_message">You need to log some words before sending Email.</string>
    <string name="log_entries_deleted_reminder">Log entries older than six weeks are automatically erased.</string>

    <string name="edit_warning_msg">Changes made here will update <b>all log entries</b> for this word.</string>

    <!-- headings -->
    <string name="help_heading">Mood Log</string>

    <!-- buttons -->
    <string name="back_btn_text">Back</string>    
    <string name="help_btn_text">Help</string>
    <string name="log_it_btn_text">Log It</string>
    <string name="mail_report_btn_text">Mail Report</string>
    <string name="view_log_btn_text">View Log</string>
</resources>
