<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView style="@style/title_heading"
              android:text="@string/how_do_you_feel"/>

    <ListView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1.0"
              android:id="@android:id/list"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center">

        <EditText android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_weight="1.0"
                  android:id="@+id/word_entry"
                  android:inputType="textCapWords"
                  android:maxLines="1"
                  android:maxLength="30"
                  android:imeOptions="actionDone"
                  android:layout_marginLeft="6dp"
                  android:layout_marginRight="3dp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_btn"
                android:text="@string/log_it_btn_text"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"/>

    </LinearLayout>

    <LinearLayout style="@style/button_bar">
        <Button android:id="@+id/view_log_btn"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_log_btn_text"/>
        <Button android:id="@+id/mail_report_btn"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mail_report_btn_text"/>
        <Button android:id="@+id/help_btn"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help_btn_text"/>

    </LinearLayout>


</LinearLayout>
